[project]
name = "xy-utils"
version = "0.2.0"
description = "xinyan的工具包，coding with deepseek."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "mcp>=1.27.1",
    "sqlite-utils>=3.39",
]

[project.scripts]
mdheading = "mdheading.cli:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mdheading"]
